# heal-platform-sdk

./: .gitignore  .secrets.baseline  README.md  pyproject.toml
.github/: image_build_push.yaml
.github/workflows/: ci.yaml
heal/: external_file_metadata_generator.py  harvard_downloads.py  mpd_downloads.py  qdr_downloads.py  utils.py
heal/cli/: extract.py  heal_cli.py  validate.py  vlmd.py
heal/vlmd/: README.md  __init__.py  config.py  file_utils.py  utils.py
heal/vlmd/extract/: conversion.py  csv_data_conversion.py  csv_dict_conversion.py  extract.py  json_dict_conversion.py  redcap_csv_dict_conversion.py  utils.py
heal/vlmd/mappings/: __init__.py  names.py  redcap_csv_headers.py  redcap_field_mapping.py  typesets.py  values.py  versions.py
heal/vlmd/schemas/: heal_csv.json  heal_csv.py  heal_json.json  heal_json.py
heal/vlmd/validate/: csv_validator.py  json_validator.py  utils.py  validate.py  validate_extract.py
notebooks/: NDA_data_package_download.ipynb  NSRR_data_download.ipynb  external_data_download.ipynb  qdr_data_download.ipynb
tests/: ci_commands_script.sh  conftest.py  test_cli.py  test_external_file_metadata.py  test_harvard_download.py  test_mpd_download.py  test_qdr_download.py  test_syracuse_qdr.py  test_vlmd_conversion.py  test_vlmd_csv_conversion.py  test_vlmd_csv_data_conversion.py  test_vlmd_csv_validator.py  test_vlmd_extract.py  test_vlmd_extract_utils.py  test_vlmd_file_utils.py  test_vlmd_json_conversion.py  test_vlmd_json_validator.py  test_vlmd_redcap_conversion.py  test_vlmd_redcap_mappings.py  test_vlmd_typesets.py  test_vlmd_utils.py  test_vlmd_validate.py  test_vlmd_validate_extract.py  test_vlmd_validate_utils.py
tests/test_data/vlmd/invalid/: vlmd_additional_properties.json  vlmd_invalid.txt  vlmd_missing_description.csv  vlmd_missing_description.json  vlmd_missing_description.tsv  vlmd_missing_name.csv  vlmd_missing_name.json  vlmd_missing_name.tsv  vlmd_redcap_checkbox_unfilled.csv  vlmd_string_in_maxLength.csv  vlmd_string_in_maxLength.json
tests/test_data/vlmd/valid/: vlmd_csv_to_csv.json  vlmd_csv_to_json.json  vlmd_redcap_dict.csv  (+10 more)
